--- a/main.css
+++ b/main.css
@@ -3,40 +3,57 @@
   }
 
 body {
-    font-family: sans-serif
+    font-family: 'Turret Road', sans-serif;
+    font-size: 18px;
+    color: white;
+    background-image: url(images/background.jpg);
+    background-size: cover;
+    text-align: center;
 }
 header {
-    text-align: center;
+    
 }
 footer {
-    text-align: center;
+    
+}
+
+h1 {
+    font-family: 'Audiowide', sans-serif;
+}
+
+h2 {
+    
+}
+
+form {
+    text-align: left;
 }
 
 .container {
     max-width: 500px;
     margin: 30px auto;
     padding: 20px;
-    border: 1px solid black;
 }
 img {
     display: block;
-    width: 50px;
+    width: 300px;
     padding: 10px;
     margin: 0 auto;
 }
 
 article {
     width: 90%;
-    height: 80px;
     padding: 5px;
     margin: 0 auto;
-    border: 1px dashed black;
+    
+}
+
+.js-top-text {
+
 }
 .js-inner-sect {
     display: block;
-    border: 1px dashed black;
     width: 80%;
-    height: 200px;
     padding: 5px;
     margin: 16px auto;
 }
@@ -45,7 +62,8 @@ article {
     display: block;
     width: 100px;
     padding: 7px;
-    margin: 0 auto;
+    margin: 20px auto 0;
+    border-radius: 10px;
 }
 #A, #B, #C, #D {
     margin: 10px;
