--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@ body {
     font-family: 'Turret Road', sans-serif;
     font-size: 18px;
     color: white;
-    background-image: url(images/background.jpg);
+    background-image: url(images/background2.jpg);
     background-size: cover;
     text-align: center;
 }
