--- a/main.css
+++ b/main.css
@@ -3,12 +3,12 @@
 }
 
 html {
-    height: 100%;
+    /* height: 100%; */
+    font-size: 26px;
 }
 
 body {
     font-family: 'Turret Road', sans-serif;
-    font-size: 18px;
     color: white;
     background-image: url(images/background2.jpg);
     background-size: cover;
@@ -25,27 +25,29 @@ form {
 }
 
 .container {
-    max-width: 500px;
+    width: 80%;
     margin: 0 auto;
-    padding: 8px;
+    padding: 6px;
 }
 img {
     display: block;
-    width: 300px;
-    padding: 10px;
+    width: 80%;
     margin: 0 auto;
 }
 
 article {
     width: 90%;
-    padding: 5px;
+    padding: 4px;
     margin: 0 auto;
     
 }
 .js-inner-sect {
     display: block;
     width: 80%;
-    margin: 12px auto;
+    margin: 4px auto;
+}
+p {
+    margin: 2px;
 }
 
 .butt {
@@ -57,4 +59,16 @@ article {
 }
 #A, #B, #C, #D {
     margin: 10px;
+}
+
+@media (min-width: 700px) {
+    html {
+        font-size: 16px;
+    }
+    .container {
+        width: 60%;
+    }
+    img {
+        width: 55%;
+    }
 }
